--- a/index.html
+++ b/index.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="サイトの説明文が入ります">
-        <title>RaiseTech（レイズテック）| 最速で稼げるプロになるエンジニアリングスクール</title>
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700;900&display=swap" rel="stylesheet">
-        <link href="./css/ress.css" rel="stylesheet">
-        <link href="./css/style.css" rel="stylesheet">
-    </head>
-    <body>
-        <header class="1-header">
-        </header>
-        <main class="1-main">
-        </main>
-        <footer class="1-footer">
-        </footer>
-    </body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="サイトの説明文が入ります">
+    <title>RaiseTech（レイズテック）| 最速で稼げるプロになるエンジニアリングスクール</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="./css/ress.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
+    <script type="text/javascript" src="http://livejs.com/live.js"></script>
+  </head>
+  <body>
+    <header class="header">
+      <!-- align=leftで改行したあとの文が画像の下に表示されるのを防止 -->
+      <img src="images/header-logo.svg" align="left">
+      <p>最速で<strong>「稼げる」</strong>プロになる<br>エンジニアリングスクール</p>
+      <nav>
+        <ul>
+          <li class="item1">はじめての方へ</li>
+          <li class="item2">コースのご案内</li>
+          <li class="item3">卒業生の声</li>
+          <li class="item4">メディア</li>
+          <li class="item5">サポート</li>
+          <li class="item6">受講お申し込み</li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main">
+    </main>
+    <footer class="footer">
+    </footer>
+  </body>
 </html>
