バックグラウンド画像を設定

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
       </nav>
     </header>
     <main class="main">
+      <article>
+        <div class="bg-img3">
+          <div class="bg-img2">
+            <div class="bg-img1">
+            </div>
+          </div>
+        </div>
+      </article>
     </main>
     <footer class="footer">
     </footer>
