メインコンテンツの追加

--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
         <div class="bg-img3">
           <div class="bg-img2">
             <div class="bg-img1">
+              <div class="main-container">
+                <div class="main-item">
+                  <img class="logo-img" src="images/header-logo.svg">
+                  <p>
+                    はじめまして。RaiseTech（レイズテック）は<br>
+                    最速で「稼げる」エンジニアになるための、<br>
+                    実践的なWebエンジニアリングスクールです
+                  </p>
+                  <a>マンガでわかるRaiseTech</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
