サブコンテンツの追加

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700;900&display=swap" rel="stylesheet">
     <link href="./css/ress.css" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet">
-    <script type="text/javascript" src="http://livejs.com/live.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
   </head>
   <body>
     <header class="header">
@@ -41,6 +41,41 @@
                     実践的なWebエンジニアリングスクールです
                   </p>
                   <a>マンガでわかるRaiseTech</a>
+                </div>
+              </div>
+              <div class="sub-container">
+                <div class="sub-items">
+                  <div class="circle">
+                    <i class="fas fa-dumbbell"></i>
+                  </div>
+                  <p class="p-sub-title">現場主義</p>
+                  <p class="p-sentense">
+                    「プログラム」だけでは稼げな<br>
+                    い！ 現場で求められる「技術」<br>
+                    のみ教えます。
+                  </p>
+                </div>
+                <div class="sub-items">
+                  <div class="circle">
+                    <i class="fas fa-chart-line"></i>
+                  </div>
+                  <p class="p-sub-title">現役講師</p>
+                  <p class="p-sentense">
+                    「今、求められている技術」を<br>
+                    リアルタイムに教えてくれる、<br>
+                    現役の技術者だけが講師です。
+                  </p>
+                </div>
+                <div class="sub-items">
+                  <div class="circle">
+                    <i class="far fa-life-ring"></i>
+                  </div>
+                  <p class="p-sub-title">徹底サポート</p>
+                  <p class="p-sentense">
+                    期間中の質疑応答無制限！ 個別<br>
+                    進捗管理！ 挫折させないサポー<br>
+                    トを徹底します。
+                  </p>
                 </div>
               </div>
             </div>
