--- a/index.html
+++ b/index.html
@@ -12,20 +12,34 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
   </head>
   <body>
-    <header class="header">
-      <!-- align=leftで改行したあとの文が画像の下に表示されるのを防止 -->
-      <img src="images/header-logo.svg" align="left">
-      <p>最速で<strong>「稼げる」</strong>プロになる<br>エンジニアリングスクール</p>
-      <nav>
-        <ul>
-          <li class="item1">はじめての方へ</li>
-          <li class="item2">コースのご案内</li>
-          <li class="item3">卒業生の声</li>
-          <li class="item4">メディア</li>
-          <li class="item5">サポート</li>
-          <li class="item6">受講お申し込み</li>
-        </ul>
-      </nav>
+    <header class="l-header">
+      <div class="left">
+        <h1>
+          <img src="images/header-logo.svg" align="left">
+        </h1>
+        <p>最速で<span class="paragraph-bold">「稼げる」</span>プロになる<br>エンジニアリングスクール</p>
+      </div>
+
+      <div class="right">
+        <nav>
+          <ul>
+            <li class="item1">
+              <a href="#">はじめての方へ</a>
+              <ul>
+                <li>マンガでわかるRaiseTech</li>
+                <li>サポート体制とトライアル受講</li>
+                <li>就職・転職支援制度</li>
+                <li>ご利用の流れ</li>
+              </ul>
+            </li>
+            <li class="tem2"><a href="#">コースのご案内</a></li>
+            <li class="tem3"><a href="#">卒業生の声</a></li>
+            <li class="tem4"><a href="#">メディア</a></li>
+            <li class="tem5"><a href="#">サポート</a></li>
+            <li class="tem6"><a href="#">受講お申し込み</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main class="main">
       <article>
