ヘッダーメニューの作成（完了）

--- a/index.html
+++ b/index.html
@@ -22,21 +22,41 @@
 
       <div class="right">
         <nav>
-          <ul>
-            <li class="item1">
+          <ul class="parent-ul">
+            <li>
               <a href="#">はじめての方へ</a>
-              <ul>
-                <li>マンガでわかるRaiseTech</li>
-                <li>サポート体制とトライアル受講</li>
-                <li>就職・転職支援制度</li>
-                <li>ご利用の流れ</li>
+              <ul class="child-ul">
+                <li><a href="#">マンガでわかるRaiseTech</a></li>
+                <li><a href="#">サポート体制とトライアル受講</a></li>
+                <li><a href="#">就職・転職支援制度</a></li>
+                <li><a href="#">ご利用の流れ</a></li>
               </ul>
             </li>
-            <li class="tem2"><a href="#">コースのご案内</a></li>
-            <li class="tem3"><a href="#">卒業生の声</a></li>
-            <li class="tem4"><a href="#">メディア</a></li>
-            <li class="tem5"><a href="#">サポート</a></li>
-            <li class="tem6"><a href="#">受講お申し込み</a></li>
+            <li>
+              <a href="#">コースのご案内</a>
+              <ul class="child-ul">
+                <li><a href="#">デザインコース</a></li>
+                <li><a href="#">WordPress副業コース</a></li>
+                <li><a href="#">AWSフルコース</a></li>
+                <li><a href="#">AWS自動化コース</a></li>
+                <li><a href="#">Javaフルコース</a></li>
+                <li><a href="#">Javaフレームワークコース</a></li>
+              </ul>
+            </li>
+            <li><a href="#">卒業生の声</a></li>
+            <li><a href="#">メディア</a>
+              <ul class="child-ul">
+                <li><a href="#">動画一覧</a></li>
+                <li><a href="#">掲載記事一覧</a></li>
+              </ul>
+            </li>
+            <li><a href="#">サポート</a>
+              <ul class="child-ul">
+                <li><a href="#">よくあるご質問</a></li>
+                <li><a href="#">お問い合わせ</a></li>
+              </ul>
+            </li>
+            <li class="btn"><a href="#">受講お申し込み</a></li>
           </ul>
         </nav>
       </div>
